--- a/oefeningen/H2-B/src/index.html
+++ b/oefeningen/H2-B/src/index.html
@@ -9,14 +9,14 @@
 <body>
 
 <section class="container py-4" id="h2-shadowing">
-    <h3>H2 – Variable Shadowing</h3>
-    <div class="input-group mb-3">
-        <span class="input-group-text">Basiswaarde</span>
-        <input id="sh_base" type="number" class="form-control" placeholder="bv.
+<h3>H2 – Variable Shadowing</h3>
+<div class="input-group mb-3">
+<span class="input-group-text">Basiswaarde</span>
+<input id="sh_base" value="10" type="number" class="form-control" placeholder="bv.
 10">
-        <button id="sh_run" class="btn btn-outline-dark">Run</button>
-    </div>
-    <ul id="sh_out" class="list-group"></ul>
+<button id="sh_run" class="btn btn-outline-dark">Run</button>
+</div>
+<ul id="sh_out" class="list-group"></ul>
 </section>
 
 
