--- a/oefeningen/H3-A/src/index.html
+++ b/oefeningen/H3-A/src/index.html
@@ -8,16 +8,27 @@
 </head>
 <body>
 
-<section class="container py-4" id="h3-slug-maker">
-    <h3>H3 – Slug Maker</h3>
-    <div class="form-floating mb-3">
-        <input id="sm_title" class="form-control" placeholder="Titel">
-        <label for="sm_title">Titel</label>
-    </div>
-    <div>
-        <span class="me-2">Slug:</span>
-        <span id="sm_slug" class="badge text-bg-secondary">-</span>
-    </div>
+<section class="container py-4" id="h3-formatter-station">
+<h3>H3 – Formatter Station</h3>
+<!-- Input Group -->
+<div class="input-group mb-3">
+<span class="input-group-text" id="fs_label">Tekst</span>
+<input
+id="fs_text"
+type="text"
+class="form-control"
+placeholder="Typ hier..."
+aria-describedby="fs_label"
+>
+</div>
+<!-- Button Group -->
+<div class="btn-group mb-3" role="group" aria-label="Formatter acties">
+<button id="fs_upper" type="button" class="btn btn-outlinedark">toUpperCase()</button>
+<button id="fs_lower" type="button" class="btn btn-outlinedark">toLowerCase()</button>
+<button id="fs_cap" type="button" class="btn btn-outlinedark">Capitalize()</button>
+</div>
+<!-- List Group: max 5 resultaten -->
+<ul id="fs_results" class="list-group"></ul>
 </section>
 
 
